# gdtk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  game.c
include/gdtk/: gdtk.h
include/gdtk/core/: defines.h
include/gdtk/core/types/: vector.h
include/gdtk/graphics/: renderer.h
include/gdtk/graphics/vulkan/: device.h  instance.h  surface.h  swapchain.h  types.h  vulkan.h
include/gdtk/platform/: app.h  errors.h  events.h  log.h  types.h
src/gdtk/: gdtk.c
src/gdtk/graphics/: renderer_macos.c
src/gdtk/graphics/vulkan/: device.c  instance.c  renderer.c  surface.c  swapchain.c
src/gdtk/platform/: app.c  log.c
